--- a/index.html
+++ b/index.html
@@ -1,74 +1,117 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]>
+<html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html class="lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Bacss64 : image to base64 based data url css generator" />
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
 
-    <title>Bacss64</title>
-  </head>
+    <style type="text/css">
+        #examples ul {
+            display: table;
+            table-layout: fixed;
+            width: 100%;
+            box-sizing: border-box;
+            margin: 0;
+        }
 
-  <body>
+        #examples ul li {
+            display: table-row;
+        }
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/grmlin/bacss64">View on GitHub</a>
+        #examples ul li > div {
+            display: table-cell;
+        }
+        
+        #examples ul li > div + div {
+            padding-left: 20px;
+        }
 
-          <h1 id="project_title">Bacss64</h1>
-          <h2 id="project_tagline">image to base64 based data url css generator</h2>
+        #examples ul li + li div {
+            padding-top: 20px;
+        }
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/grmlin/bacss64/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/grmlin/bacss64/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+        #examples ul li div:first-child {
+            vertical-align: middle;
+            width: 33%;
+        }
+
+        #examples ul li textarea {
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        #examples ul li .preview {
+            overflow: auto;
+        }
+
+    </style>
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/base64.js"></script>
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/FileSelector.js"></script>
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/ImageContainer.js"></script>
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/CssDeclaration.js"></script>
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/ExampleImage.js"></script>
+
+    <script src="https://raw.github.com/grmlin/bacss64/master/js/app.js"></script>
+</head>
+<body>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span12 page-header">
+            <h1>bacss64</h1>
+
+            <p class="muted">an image to base64 based css declarations generator.</p>
+        </div>
     </div>
+    <div class="row-fluid">
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+        <div class="span6">
+            <p>
+                The css generated below works fine in all browsers supporting data urls. These are all modern browsers
+                up from IE8. <br>
+                Have a look at <a href="https://developer.mozilla.org/en-US/docs/data_URIs">this article</a> at the
+                mozilla developer network to learn more about it.
+            </p>
+        </div>
+        <div class="span4">
+            <div class="alert alert-info"><strong>I know that this tool works in chrome, didn't test it elsewhere
+                yet</strong></div>
+        </div>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Bacss64 maintained by <a href="https://github.com/grmlin">grmlin</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+    <div class="row-fluid">
+        <div class="span12">
+            <form id="image-editor">
+                <legend>Select one or more image file(s)</legend>
+                <fieldset>
+                    <input id="source-select" type="file" accept="image/*" multiple>
+                    <span class="help-inline muted">Select the image you want to use in your css</span>
+                </fieldset>
+                <fieldset class="hide">
+                    <legend>Result</legend>
+                    <div class="result">
+                        <textarea name="imgsource" readonly id="imgsource" class="span8" rows="10"></textarea>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
     </div>
-
-    
-
-  </body>
+    <hr>
+    <div id="examples">
+        <ul></ul>
+    </div>
+</div>
+</body>
 </html>
